[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/gui/DroneSelected.gd" type="Script" id=1]

[node name="DroneSelected" type="Control"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -137.0
margin_top = -93.0
margin_right = -9.0
margin_bottom = 92.0
mouse_filter = 2
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -126.0
margin_top = -90.0
margin_bottom = 90.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_right = 154.0
margin_bottom = 252.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 147.0
margin_bottom = 245.0
custom_constants/separation = 8
alignment = 1

[node name="DroneName" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 140.0
margin_bottom = 14.0
text = "Drone name"
align = 1

[node name="EditPath" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer"]
visible = false
margin_top = 22.0
margin_right = 112.0
margin_bottom = 62.0
rect_min_size = Vector2( 0, 40 )
text = "Edit Path"

[node name="Add Points" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 140.0
margin_bottom = 62.0
rect_min_size = Vector2( 0, 40 )
text = "Add Points"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Delete" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 140.0
margin_bottom = 110.0
rect_min_size = Vector2( 0, 40 )
text = "Delete Drone"

[node name="Deselect" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 118.0
margin_right = 140.0
margin_bottom = 158.0
rect_min_size = Vector2( 0, 40 )
text = "Deselect Drone"

[node name="syncronyze position" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 166.0
margin_right = 140.0
margin_bottom = 206.0
rect_min_size = Vector2( 0, 40 )
text = "syncronyze position"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 214.0
margin_right = 140.0
margin_bottom = 238.0

[node name="Button" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 62.0
margin_bottom = 24.0
text = "velocita"

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 66.0
margin_right = 140.0
margin_bottom = 24.0
min_value = 1.0
max_value = 10.0
step = 0.5
value = 1.0

[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/EditPath" to="." method="_on_EditPath_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/Add Points" to="." method="_on_Add_Points_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/Delete" to="." method="_on_Delete_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/Deselect" to="." method="_on_Deselect_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/syncronyze position" to="." method="_on_syncronyze_position_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
